--- a/fyp/style.css
+++ b/fyp/style.css
@@ -7,158 +7,158 @@
         /* Optional: Makes the sample page fill the window. */
 
 
-#header-content {
-    margin: 0 auto;
-    padding-top: 10px;
-    padding-right: 200px;
-    padding-left: 40px;
-    height: 110px;
-}
+        #header-content {
+            margin: 0 auto;
+            padding-top: 10px;
+            padding-right: 200px;
+            padding-left: 40px;
+            height: 110px;
+        }
 
-#website-logo {
-    float: left;
+        #website-logo {
+            float: left;
 
-}
+        }
 
-#logo {
-    width: 100px;
-	height: 100px;
-}
+        #logo {
+            width: 100px;
+            height: 100px;
+            background: url('homepage.php') no-repeat;
+        }
 
-header {
-    background-color: #AADAFF;
-    width: 100%;
-    height: 110px;
-    position: sticky;
-}
-
-
-
-#userpass {
-    display: none;
-}
-
-#loginform {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 4%;
-    background-color: white;
-}
-
-#loginform label,
-#loginform .logininput {
-    margin-left: 5%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-
-#loginform #image {
-    margin-left: 20%;
-    margin-right: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-
-#loginform .logininput {
-    width: 90%;
-}
-
-#loginform .radiologininput {
-    width: auto;
-    margin-left: 5%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-}
-
-#login {
-    width: 90%;
-    margin: 5%;
-    background-color: blue;
-    padding: 3%;
-    border: 0;
-}
+        header {
+            background-color: #AADAFF;
+            width: 100%;
+            height: 110px;
+            position: sticky;
+        }
 
 
 
+        #userpass {
+            display: none;
+        }
 
-#range {
-    display: inline;
-}
+        #loginform {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 4%;
+            background-color: white;
+        }
 
-form {
-    width: 20%;
-    display: inline;
-}
-
-
-.loginbox {
-    display: inline;
-    float: right;
-}
-
-.loginbutton {
-    background-color: blue;
-    padding: 20%;
-    color: white;
-    display: contents;
-}
-
-.topmenu {
-    width: 70%;
-    background-color: #CECDC9;
-    display: inline-block;
-    padding: 2%;
-    margin-top: 2%;
-}
+        #loginform label,
+        #loginform .logininput {
+            margin-left: 5%;
+            margin-top: 5%;
+            margin-bottom: 5%;
+        }
 
 
-#topheadnav a:link {
-    text-decoration: none;
-    color: white;
-}
+        #loginform #image {
+            margin-left: 20%;
+            margin-right: auto;
+            margin-top: 5%;
+            margin-bottom: 5%;
+        }
 
-#topheadnav a:hover {
-    text-decoration: underline;
-}
 
-#topheadnav a:visited {
-    color: white;
-}
+        #loginform .logininput {
+            width: 90%;
+        }
 
-html {
-    height: 100%;
-	margin: 0;
-	padding: 0;
-}
+        #loginform .radiologininput {
+            width: auto;
+            margin-left: 5%;
+            margin-top: 5%;
+            margin-bottom: 5%;
+        }
 
-body {
-	padding:0;
-    margin: 0;
-    background-color: #E4E3DF;
-    height: 100%;
-    padding-bottom: 20px;
-}
+        #login {
+            width: 90%;
+            margin: 5%;
+            background-color: blue;
+            padding: 3%;
+            border: 0;
+        }
 
-/* CSS for the Filters */
 
-h1 {
-    background-color: #CECDC9;
-    text-align: left;
-	padding-left: 55px;
-    padding-bottom: 2%;
-    padding-top: 2%;
-    margin: 0;
-}
 
-h2 {
-    background-color: #CECDC9;
-    text-align: left;
-	padding-left: 55px;
-    padding-bottom: 2%;
-    padding-top: 2%;
-    margin: 0;
-}
 
+        #range {
+            display: inline;
+        }
+
+        form {
+            width: 20%;
+            display: inline;
+        }
+
+
+        .loginbox {
+            display: inline;
+            float: right;
+        }
+
+        .loginbutton {
+            background-color: blue;
+            padding: 20%;
+            color: white;
+            display: contents;
+        }
+
+        .topmenu {
+            width: 70%;
+            background-color: #CECDC9;
+            display: inline-block;
+            padding: 2%;
+            margin-top: 2%;
+        }
+
+
+        #topheadnav a:link {
+            text-decoration: none;
+            color: white;
+        }
+
+        #topheadnav a:hover {
+            text-decoration: underline;
+        }
+
+        #topheadnav a:visited {
+            color: white;
+        }
+
+        html {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            padding: 0;
+            margin: 0;
+            background-color: #E4E3DF;
+            height: 100%;
+            padding-bottom: 20px;
+        }
+
+        /* CSS for the Filters */
+
+        h1 {
+            background-color: #CECDC9;
+            text-align: left;
+            padding-left: 55px;
+            padding-bottom: 2%;
+            padding-top: 2%;
+            margin: 0;
+        }
+
+        h2 {
+            background-color: #CECDC9;
+            text-align: left;
+            padding-left: 55px;
+            padding-bottom: 2%;
+            padding-top: 2%;
+            margin: 0;
+        }
